@@ -268,10 +268,10 @@ static const char* const _renderMode2 =
 	"	ivec2 offset[4];\n"
 	"	vec2 incoord = texCoord;\n"
 	"	if (mosaic.x > 1) {\n"
-	"		incoord.x = float(int(incoord.x) % mosaic.x);\n"
+	"		incoord.x = floor(incoord.x - float(int(incoord.x) % mosaic.x));\n"
 	"	}\n"
 	"	if (mosaic.y > 1) {\n"
-	"		incoord.y = float(int(incoord.y) % mosaic.y);\n"
+	"		incoord.y = floor(incoord.y - float(int(incoord.y) % mosaic.y));\n"
 	"	}\n"
 	"	loadAffine(int(incoord.y), mat, offset);\n"
 	"	float y = fract(incoord.y);\n"
@@ -321,10 +321,10 @@ static const char* const _renderMode35 =
 	"	ivec2 offset[4];\n"
 	"	vec2 incoord = texCoord;\n"
 	"	if (mosaic.x > 1) {\n"
-	"		incoord.x = float(int(incoord.x) % mosaic.x);\n"
+	"		incoord.x = floor(incoord.x - float(int(incoord.x) % mosaic.x));\n"
 	"	}\n"
 	"	if (mosaic.y > 1) {\n"
-	"		incoord.y = float(int(incoord.y) % mosaic.y);\n"
+	"		incoord.y = floor(incoord.y - float(int(incoord.y) % mosaic.y));\n"
 	"	}\n"
 	"	loadAffine(int(incoord.y), mat, offset);\n"
 	"	float y = fract(incoord.y);\n"
@@ -386,10 +386,10 @@ static const char* const _renderMode4 =
 	"	ivec2 offset[4];\n"
 	"	vec2 incoord = texCoord;\n"
 	"	if (mosaic.x > 1) {\n"
-	"		incoord.x = float(int(incoord.x) % mosaic.x);\n"
+	"		incoord.x = floor(incoord.x - float(int(incoord.x) % mosaic.x));\n"
 	"	}\n"
 	"	if (mosaic.y > 1) {\n"
-	"		incoord.y = float(int(incoord.y) % mosaic.y);\n"
+	"		incoord.y = floor(incoord.y - float(int(incoord.y) % mosaic.y));\n"
 	"	}\n"
 	"	loadAffine(int(incoord.y), mat, offset);\n"
 	"	float y = fract(incoord.y);\n"
